[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Node2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/temp_tile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 17.6792, 55.273 )

[node name="Area2d" type="Area2D"]

position = Vector2( 105.246, 80.9632 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 24.0082, 8.06457 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 23.734, 8.08271 )
scale = Vector2( 3.59487, 1.14857 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="ray_below" type="RayCast2D" parent="." index="2"]

position = Vector2( 22.4554, 73.2779 )
scale = Vector2( 1, 0.338955 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="ray_left" type="RayCast2D" parent="." index="3"]

position = Vector2( -41.5098, 9.65154 )
rotation = 1.5708
scale = Vector2( 1, 0.401485 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ray_above" type="RayCast2D" parent="." index="4"]

position = Vector2( 20.9019, -56.7068 )
rotation = 3.14159
scale = Vector2( 1, 0.29016 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ray_right" type="RayCast2D" parent="." index="5"]

position = Vector2( 89.471, 8.00216 )
rotation = 4.71239
scale = Vector2( 1, 0.370289 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]


